--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           enjoy a hassle-free and delicious meal from the comfort of your own
           home.
         </p>
-        <button type="button" width="98" height="32">Order Now</button>
+        <button type="button">Order Now</button>
       </section>
       <section>
         <img src="./images/aple2.png" alt="image-of-apple" width="396" />
@@ -108,8 +108,8 @@
           Food From Anywhere.
         </p>
         <img src="./images/banan.png" alt="banan" width="608" height="266" />
-        <form action="" width="279" height="42">Enter your email</form>
-        <button type="submit" width="103" height="42">Subscribe</button>
+        <p>Enter your email</p>
+        <button type="submit">Subscribe</button>
       </section>
       <footer>
         <img src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
@@ -122,8 +122,7 @@
             <li><a>Contact</a></li>
           </ul>
         </nav>
-        <p>Subscribe</p>
-        <form action="">Enter your email</form>
+        <p>Enter your email</p>
         <button type="submit">Subscribe</button>
         <p>By subscribing you agree to with our<a href="">Privacy Policy</a></p>
         <ul>
