--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button type="button">Order Now</button>
       </section>
       <section>
-        <img src="./images/aple2.png" alt="image-of-apple" width="396" />
+        <img src="./images/apple.png" alt="image-of-apple" width="396" />
         <h2>What’s Special About Our Offerings</h2>
         <p>
           With our platform, you can browse through a diverse selection of
