--- a/index.html
+++ b/index.html
@@ -3,37 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Food delivery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href=""
-        ><img src="./images/logo.svg" alt="logo" width="66" height="52"
-      /></a>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Menu</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <button type="button">Order Now</button>
+    <header class="header-section">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            ><img src="./images/logo.svg" alt="logo" width="66" height="52"
+          /></a>
+
+          <ul class="header-list">
+            <li class="header-item"><a class="header-link" href="">Home</a></li>
+            <li class="header-item">
+              <a class="header-link" href="">About</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Service</a>
+            </li>
+            <li class="header-item"><a class="header-link" href="">Menu</a></li>
+            <li class="header-item">
+              <a class="header-link" href="">Contact</a>
+            </li>
+          </ul>
+          <button class="header-btn" type="button">Order Now</button>
+        </nav>
+      </div>
     </header>
     <main>
-      <section>
-        <img src="./images/salad.png" alt="images-of-salad" width="528" />
-        <h1>Enjoy Your Favorite Food From Anywhere</h1>
-        <p>
+      <!-- Hero section -->
+      <section class="container hero-section">
+        <div class="hero-div">  
+         <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
+         <p class="hero-text">
           With just a few clicks, you can have your favorite meals delivered
           straight to your doorstep, no matter where you are. Order now and
           enjoy a hassle-free and delicious meal from the comfort of your own
           home.
-        </p>
-        <button type="button">Order Now</button>
+         </p>
+         <button class="hero-btn" type="button">Order Now</button>
+         
+      </div>
+      <img class="hero-pic" src="./images/salad.png" alt="images-of-salad" width="528" />
       </section>
-      <section>
+
+      <!-- Offerings section -->
+      <section class="container">
         <img src="./images/apple.png" alt="image-of-apple" width="396" />
         <h2>What’s Special About Our Offerings</h2>
         <p>
@@ -60,7 +89,9 @@
         </ul>
         <button type="button">Order Now</button>
       </section>
-      <section>
+
+      <!-- Favorites section -->
+      <section class="container">
         <h2>Some of Our Favorites</h2>
         <p>Looking for something delicious?</p>
         <ul>
@@ -74,7 +105,9 @@
           <li><img src="./images/borshch.png" alt="borshch" width="315" /></li>
         </ul>
       </section>
-      <section>
+
+      <!-- Customers section -->
+      <section class="container">
         <h2>What our Customers Say</h2>
         <p>
           Don't just take our word for it - see what our satisfied customers
@@ -101,7 +134,9 @@
           </li>
         </ul>
       </section>
-      <section>
+
+      <!-- Subscribe section -->
+      <section class="container">
         <h2>Subscribe To Get Special Offers</h2>
         <p>
           Order now and receive 10% off your first meal with Enjoy Your Favorite
@@ -111,33 +146,35 @@
         <p>Enter your email</p>
         <button type="submit">Subscribe</button>
       </section>
-      <footer>
-        <img src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
-        <nav>
-          <ul>
-            <li><a>Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Service</a></li>
-            <li><a>Menu</a></li>
-            <li><a>Contact</a></li>
-          </ul>
-        </nav>
-        <p>Enter your email</p>
-        <button type="submit">Subscribe</button>
-        <p>By subscribing you agree to with our<a href="">Privacy Policy</a></p>
-        <ul>
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Terms of Service</a></li>
-          <li><a href="">Cookies Settings</a></li>
-        </ul>
-        <p>2022 FoodSta. All right reserved.</p>
-        <img
-          src="./images/footer-fruits.png"
-          alt="misc-fruits"
-          width="1211"
-          height="266"
-        />
-      </footer>
     </main>
+
+    <!-- Footer section -->
+    <footer class="container">
+      <img src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
+      <nav>
+        <ul>
+          <li><a>Home</a></li>
+          <li><a>About</a></li>
+          <li><a>Service</a></li>
+          <li><a>Menu</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </nav>
+      <p>Enter your email</p>
+      <button type="submit">Subscribe</button>
+      <p>By subscribing you agree to with our<a href="">Privacy Policy</a></p>
+      <ul>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+        <li><a href="">Cookies Settings</a></li>
+      </ul>
+      <p>2022 FoodSta. All right reserved.</p>
+      <img
+        src="./images/footer-fruits.png"
+        alt="misc-fruits"
+        width="1211"
+        height="266"
+      />
+    </footer>
   </body>
 </html>
