--- a/index.html
+++ b/index.html
@@ -62,32 +62,41 @@
       </section>
 
       <!-- Offerings section -->
-      <section class="container">
-        <img src="./images/apple.png" alt="image-of-apple" width="396" />
-        <h2>What’s Special About Our Offerings</h2>
-        <p>
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <ul>
-          <li>
-            <h3>Fasest Delivery</h3>
-            <p>
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
-            </p>
-          </li>
-          <li>
-            <h3>Easy To Order</h3>
-            <p>
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
+      <section class="container offerings-container">
+        <div class="offerings-div">  
+          <img class="offerings-pic" src="./images/apple.png" alt="image-of-apple" 
+         width="396"
+         />
+
+        <div class="right-side-div">   
+          <ul class="offerings-list-one"> 
+            <h2 class="offerings-title">What’s Special About Our Offerings</h2>
+            <p class="offerings-text">
+            With our platform, you can browse through a diverse selection of
+            cuisines and local restaurants, and choose from a variety of dishes
+            that cater to your specific taste buds.
+          </p>
+          </ul>
+          <ul class="offerings-list-two">
+            <li class="offerings-item">
+              <h3 class="offerings-subtitle">Fasest Delivery</h3>
+              <p class="offerings-list-text">
+                Our advanced logistics system and dedicated delivery partners
+                ensure that your meals are delivered to you within 30-minutes.
+              </p>
+            </li>
+            <li class="offerings-item">
+              <h3 class="offerings-subtitle">Easy To Order</h3>
+              <p class="offerings-list-text">
+                You can browse through a wide variety of cuisines and restaurants,
+                select your favorite meals, and place your order in just a few
+                clicks.
+              </p>
+            </li>
+          </ul>
+          <button class="offerings-btn" type="button">Order Now</button>
+        </div>  
+       </div>
       </section>
 
       <!-- Favorites section -->
