--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
       <!-- Offerings section -->
       <section class="container offerings-container">
         <div class="offerings-div">  
-          <img class="offerings-pic" src="./images/apple.png" alt="image-of-apple" 
+          <img class="offerings-pic" src="./images/aple.svg" alt="image-of-apple" 
          width="396"
          />
 
         <div class="right-side-div">   
           <ul class="offerings-list-one"> 
-            <h2 class="offerings-title">What’s Special About Our Offerings</h2>
-            <p class="offerings-text">
-            With our platform, you can browse through a diverse selection of
-            cuisines and local restaurants, and choose from a variety of dishes
-            that cater to your specific taste buds.
-          </p>
+            <li> 
+              <h2 class="offerings-title">What’s Special About Our Offerings</h2>
+              <p class="offerings-text">
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of dishes
+              that cater to your specific taste buds.
+              </p>
+            </li>
           </ul>
           <ul class="offerings-list-two">
             <li class="offerings-item">
@@ -100,73 +102,86 @@
       </section>
 
       <!-- Favorites section -->
-      <section class="container">
-        <h2>Some of Our Favorites</h2>
-        <p>Looking for something delicious?</p>
-        <ul>
-          <li>
-            <img src="./images/gamburger.png" alt="gamburger" width="315" />
-          </li>
-          <li><img src="./images/Pasta.png" alt="pasta" width="315" /></li>
-          <li><img src="./images/pizza.png" alt="pizza" width="315" /></li>
-          <li><img src="./images/chicken.png" alt="chicken" width="315" /></li>
-          <li><img src="./images/salat.png" alt="salat" width="315" /></li>
-          <li><img src="./images/borshch.png" alt="borshch" width="315" /></li>
-        </ul>
+      <section class="container favorite-container">
+        <div class="favorites-div"> 
+          <h2 class="favorites-title">Some of Our Favorites</h2>
+          <p class="favorites-text">Looking for something delicious?</p>
+          <ul class="favorites-list">
+            <li class="favorites-item">
+              <img class="favorites-img" src="./images/gamburger.png" alt="gamburger" width="315" />
+            </li>
+            <li class="favorites-item"><img class="favorites-img" src="./images/Pasta.png" alt="pasta" width="315" /></li>
+            <li class="favorites-item"><img class="favorites-img" src="./images/pizza.png" alt="pizza" width="315" /></li>
+            <li class="favorites-item"><img class="favorites-img" src="./images/chicken.png" alt="chicken" width="315" /></li>
+            <li class="favorites-item"><img class="favorites-img" src="./images/salat.png" alt="salat" width="315" /></li>
+            <li class="favorites-item"><img class="favorites-img" src="./images/borshch.png" alt="borshch" width="315" /></li>
+          </ul>
+        </div>
       </section>
 
       <!-- Customers section -->
-      <section class="container">
-        <h2>What our Customers Say</h2>
-        <p>
-          Don't just take our word for it - see what our satisfied customers
-          have to say
-        </p>
-        <ul>
-          <li>
-            <p>
-              “The Best app I have used to order food in a while, so many
-              options to choose from too, I would recommend to a freind, No
-              questions asked”
-            </p>
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
-          </li>
-          <li>
-            <p>
-              “The ease with which I can just go in and order what i want was
-              amazing, It has been a very pleasant experience ordering from this
-              app”
-            </p>
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
-          </li>
-        </ul>
+      <section class="container customers-container">
+        <div class="customers-div"> 
+          <h2 class="customers-title">What our Customers Say</h2>
+          <p class="customers-text">Don't just take our word for it - see what our satisfied customers
+          have to say </p>
+          <div class="review-cards">    
+            <ul class="customers-list">
+              <li class="customers-item">
+                <p class="customers-list-text">  
+                      “The Best app I have used to order food in a while, so many
+                      options to choose from too, I would recommend to a freind, No
+                      questions asked”
+                </p>
+                <h3 class="customers-list-title">Sumith Shah</h3>
+                <p class="customers-text-small">Some Dude</p> 
+              </li>
+              <li class="customers-item">
+                <p class="customers-list-text">
+                    “The ease with which I can just go in and order what i want was
+                    amazing, It has been a very pleasant experience ordering from this
+                    app”
+                </p>
+                <h3 class="customers-list-title">Sumith Shah</h3>
+                <p class="customers-text-small">Some Dude</p>
+              </li>
+            </ul>
+          </div>  
+        </div>
       </section>
 
       <!-- Subscribe section -->
-      <section class="container">
-        <h2>Subscribe To Get Special Offers</h2>
-        <p>
-          Order now and receive 10% off your first meal with Enjoy Your Favorite
-          Food From Anywhere.
-        </p>
-        <img src="./images/banan.png" alt="banan" width="608" height="266" />
-        <p>Enter your email</p>
-        <button type="submit">Subscribe</button>
+      <section class="container subscribe-container">
+        <ul class="subscribes-list"> 
+          <li> 
+            <h2 class="subscribe-title">Subscribe To Get Special Offers</h2>
+            <p class="subscribe-text">
+              Order now and receive 10% off your first meal with Enjoy Your Favorite
+              Food From Anywhere.
+            </p>  
+            <ul class="subscribes-list-small"> 
+              <p class="subscribe-text-small">Enter your email</p>
+              <button class="subscribe-btn" type="submit">Subscribe</button>
+            </ul>  
+          </li>  
+          <li> 
+            <img class="subscribe-pic" src="./images/banan.svg" alt="banan" width="608" height="266" />
+          </li>  
+        </ul>
       </section>
     </main>
 
     <!-- Footer section -->
-    <footer class="container">
-      <img src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
-      <nav>
-        <ul>
-          <li><a>Home</a></li>
-          <li><a>About</a></li>
-          <li><a>Service</a></li>
-          <li><a>Menu</a></li>
-          <li><a>Contact</a></li>
+    <footer class="container footer-container">
+      
+      <nav class="footer-nav">
+        <img class="footer-logo" src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a class="nav-link">Home</a></li>
+          <li class="footer-nav-item"><a class="nav-link">About</a></li>
+          <li class="footer-nav-item"><a class="nav-link">Service</a></li>
+          <li class="footer-nav-item"><a class="nav-link">Menu</a></li>
+          <li class="footer-nav-item"><a class="nav-link">Contact</a></li>
         </ul>
       </nav>
       <p>Enter your email</p>
