--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
               Food From Anywhere.
             </p>  
             <ul class="subscribes-list-small"> 
-              <p class="subscribe-text-small">Enter your email</p>
-              <button class="subscribe-btn" type="submit">Subscribe</button>
+              <li><p class="subscribe-text-small">Enter your email</p></li>
+              <li><button class="subscribe-btn" type="submit">Subscribe</button></li>
             </ul>  
           </li>  
           <li> 
