--- a/index.html
+++ b/index.html
@@ -172,33 +172,36 @@
     </main>
 
     <!-- Footer section -->
-    <footer class="container footer-container">
-      
-      <nav class="footer-nav">
-        <img class="footer-logo" src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a class="nav-link">Home</a></li>
-          <li class="footer-nav-item"><a class="nav-link">About</a></li>
-          <li class="footer-nav-item"><a class="nav-link">Service</a></li>
-          <li class="footer-nav-item"><a class="nav-link">Menu</a></li>
-          <li class="footer-nav-item"><a class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
-      <p>Enter your email</p>
-      <button type="submit">Subscribe</button>
-      <p>By subscribing you agree to with our<a href="">Privacy Policy</a></p>
-      <ul>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">Terms of Service</a></li>
-        <li><a href="">Cookies Settings</a></li>
-      </ul>
-      <p>2022 FoodSta. All right reserved.</p>
-      <img
-        src="./images/footer-fruits.png"
-        alt="misc-fruits"
-        width="1211"
-        height="266"
-      />
+    <footer class="container">
+      <div class="footer-container"> 
+        <div class="footer-left-side"> 
+          <nav class="footer-nav">
+            <img class="footer-logo" src="./images/logo.svg" alt="footer-logo" width="66" height="52" />
+            <ul class="footer-nav-list">
+              <li><a class="nav-link">Home</a></li>
+              <li><a class="nav-link">About</a></li>
+              <li><a class="nav-link">Service</a></li>
+              <li><a class="nav-link">Menu</a></li>
+              <li><a class="nav-link">Contact</a></li>
+            </ul>
+          </nav>  
+          <ul class="footer-list-down">
+              <li><a class="link-down" href="">Privacy Policy</a></li>
+              <li><a class="link-down" href="">Terms of Service</a></li>
+              <li><a class="link-down" href="">Cookies Settings</a></li>
+          </ul>
+        </div>
+        <div class="footer-right-side"> 
+          <p class="subscribe-text">Subscribe</p>
+          <div class="form-btn-div">
+            <p class="subscribe-form">Enter your email</p>
+            <button class="subscribe-btn" type="submit">Subscribe</button>
+          </div>
+          <p class="subscribe-text-down">By subscribing you agree to with our<a href=""> <span class="footer-privacy-span">Privacy Policy</span></a></p>
+          
+          <p class="subscribe-text-last">2022 FoodSta. All right reserved.</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
