--- a/index.html
+++ b/index.html
@@ -520,23 +520,27 @@
           </div>  
         </nav>
 
-           <!-- Modal window -->
+           <!-- Footer form -->
         <div class="footer-form-div">
-            <form class="subscribe-form" name="subscribe">
-              <label class="subscribe-label" for="input-form">
-                Subscribe
-              </label>
-              <input
-                id="input-form"
-                class="subscribe-form-input"
-                name="email"
-                type="email"
-                placeholder="Enter your email"
-              />
-            </form>
-            <button class="subscribe-btn button" type="submit">
+            <label class="subscribe-label" for="input-form">
               Subscribe
-            </button>
+            </label>
+            <div class="form-btn-wrapper">
+              
+              <form class="subscribe-form" name="subscribe">
+                
+                <input
+                  id="input-form"
+                  class="subscribe-form-input"
+                  name="email"
+                  type="email"
+                  placeholder="Enter your email"
+                />
+              </form>
+              <button class="subscribe-btn button" type="submit">
+                  Subscribe
+              </button>
+            </div>
             <p class="subscribe-text-down">
               By subscribing you agree to with our<a href="">
                 <span class="footer-privacy-span">Privacy Policy</span></a
