--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           ">
           <img
             class="subscribe-banana-mob"
-            src="./images/mob/banan_mob@1x.webp 1x, ./images/mob/banan_mob@2x.webp 2x"
+            src="./images/mob/banan_mob@1x.webp"
             alt="photo of banana"
             loading="lazy"
           />
@@ -494,6 +494,7 @@
                 src="./images/desk/banan_desk@1x.webp"
                 width="608"
                 height="266"
+                alt="photo of banana"
               />
             </picture>
           </li>
@@ -525,13 +526,13 @@
 
            <!-- Footer form -->
         <div class="footer-form-div">
-            <label class="subscribe-label" for="input-form">
+            <p class="subscribe-label" >
               Subscribe
-            </label>
-            <div class="form-btn-wrapper">
+            </p>
+        <div class="form-btn-wrapper">
               
-              <form class="subscribe-form" >
-                <input
+          <form class="subscribe-form" >
+            <input
                   id="input-form"
                   class="subscribe-form-input"
                   type="email"
@@ -539,16 +540,16 @@
                   pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" 
                   required
                 />
-              </form>
-              <button class="subscribe-btn button" type="submit">
+          </form>
+          <button class="subscribe-btn button" type="submit">
                   Subscribe
-              </button>
-            </div>
-            <p class="subscribe-text-down">
+          </button>
+        </div>
+        <p class="subscribe-text-down">
               By subscribing you agree to with our<a href="">
                 <span class="footer-privacy-span">Privacy Policy</span></a
               >
-            </p>
+        </p>
         </div>
         <div class="footer-down-div">
           <ul class="footer-list-down">
@@ -582,7 +583,7 @@
               class="footer_background"
               src="./images/tabl/footer-fruits_tabl.png"
               alt="photo of fruits"
-              width="732";
+              width="732"
             />
             </picture>
       </div>
