--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
 
            <!-- Footer form -->
         <div class="footer-form-div">
-            <p class="subscribe-label" >
+            <label class="subscribe-label" for="input-form">
               Subscribe
-            </p>
+            </label>
         <div class="form-btn-wrapper">
               
           <form class="subscribe-form" >
@@ -537,6 +537,7 @@
                   class="subscribe-form-input"
                   type="email"
                   placeholder="Enter your email"
+                  name="email"
                   pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" 
                   required
                 />
