--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
               <use href="images/sprite.svg#icon-food_menu"></use>
             </svg>
           </button>
-          <button class="header-btn button" type="button" data-modal-open>
+          <a class="header-btn button" href="#offerings">Order Now</a>
+          <!-- <button class="header-btn button" type="button" data-modal-open>
             Order Now
-          </button>
+          </button> -->
         </nav>
       </div>
     </header>
@@ -186,7 +187,7 @@
           </ul>
 
           <div class="btn-read-more-div">
-            <button class="offerings-btn button" type="button">
+            <button class="offerings-btn button" type="button" data-modal-open>
               Order Now
             </button>
             <div class="icon-div">
